filters: fix action buttons spacing

--- a/webapp/src/containers/Filters/style.css
+++ b/webapp/src/containers/Filters/style.css
@@ -10,3 +10,7 @@
   font-size: 14px;
   margin-bottom: var(--spacing-small);
 }
+
+.actionsSpacing > button {
+  margin-left: var(--spacing-small);
+}
